[package]
name = "dsync"
description = "Generate rust structs & query functions from diesel schema files."
version = "0.0.17-beta"
readme = "README.md"
repository = "https://github.com/Wulf/dsync"
license = "MIT OR Apache-2.0"
keywords = ["diesel", "crud", "database", "codegen", "generation"]
categories = [
    "command-line-utilities",
    "development-tools",
    "development-tools::ffi",
    "web-programming",
]
authors = ["Haris <4259838+Wulf@users.noreply.github.com>"]
edition = "2021"

[features]
default = ["tsync", "backtrace"]
# enable support for tsync (https://github.com/Wulf/tsync)
tsync = []
# enable support for diesel_async (https://github.com/weiznich/diesel_async)
async = []
# enable support for backtraces on errors
backtrace = []

[dependencies]
clap = { version = "4.3", features = ["derive", "wrap_help"] }
clap_complete = "4.3"
syn = { version = "1", features = ["extra-traits", "full"] }
proc-macro2 = "1"
indoc = "2.0.0"
heck = "0.4" # same case converter diesel uses
thiserror = "1.0"

[lib]
path = "src/lib.rs"

[[bin]]
name = "dsync"
test = false
path = "src/bin/main.rs"
