[package]
name = "dsync"
description = "Generate rust structs & query functions from diesel schema files."
version = "0.0.17-beta"
readme = "README.md"
repository = "https://github.com/Wulf/dsync"
license = "MIT OR Apache-2.0"
keywords = ["diesel", "crud", "database", "codegen", "generation"]
categories = [
    "command-line-utilities",
    "development-tools",
    "development-tools::ffi",
    "web-programming",
]
authors = [
    "Haris <4259838+Wulf@users.noreply.github.com>",
    "hasezoey <hasezoey@gmail.com>",
]
edition = "2021"

[features]
default = ["tsync", "backtrace", "derive-queryablebyname"]
# enable support for tsync (https://github.com/Wulf/tsync)
tsync = []
# enable support for diesel_async (https://github.com/weiznich/diesel_async)
async = []
# enable support for backtraces on errors
backtrace = []
# enable derive "QueryableByName"
derive-queryablebyname = []
# enable *experimental* queries
advanced-queries = []

[dependencies]
clap = { version = "4.4", features = ["derive", "wrap_help"] }
clap_complete = "4.4"
syn = { version = "2", features = ["extra-traits", "full"] }
proc-macro2 = "1"
indoc = "2.0.4"
heck = "0.4" # same case converter diesel uses
thiserror = "1.0"

[lib]
path = "src/lib.rs"

[[bin]]
name = "dsync"
test = false
path = "src/bin/main.rs"

[workspace]
# only some tests are currently compile-able
members = [
    "test/simple_table_pg",
    "test/simple_table_mysql",
    "test/simple_table_sqlite",
    "test/custom_model_and_schema_path",
    "test/single_model_file",
]
resolver = "2"
