[lib]
path = "lib.rs"

[package]
name = "custom_model_and_schema_path"
version = "0.1.0"
edition = "2021"

[dependencies]
diesel = { version = "*", default-features = false, features = [
    "postgres",
    "chrono",
] }
dsync = { path = "../../" }
chrono = { version = "*", features = ["serde"] }
serde = { version = "*", features = ["derive"] }
