[lib]
path = "lib.rs"

[package]
name = "simple_table_pg"
version = "0.1.0"
edition = "2021"

[dependencies]
diesel = { version = "*", default-features = false, features = [
    "postgres",
    "r2d2",
    "chrono",
] }
r2d2 = "*"
dsync = { path = "../../" }
chrono = { version = "*", features = ["serde"] }
serde = { version = "*", features = ["derive"] }
