[lib]
path = "lib.rs"

[package]
name = "simple_table_sqlite"
version = "0.1.0"
edition = "2021"

[dependencies]
diesel = { version = "*", default-features = false, features = [
    "sqlite",
    "r2d2",
    "chrono",
    "returning_clauses_for_sqlite_3_35",
] }
r2d2 = "*"
dsync = { path = "../../" }
chrono = { version = "*", features = ["serde"] }
serde = { version = "*", features = ["derive"] }
